welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:3: error: ')' expected but 'else' found.
      else { return false}} 
      ^